kubernetes/dev/01-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    env: dev
    app: travelbooking-ms
    layer: frontend
  name: dev-travelbooking-service
  namespace: dev
spec:
  type: NodePort
  selector:
    app: travelbooking-ms
  ports:
    - name: api
      port: 8080
      targetPort: 8080
