kubernetes/dev/00-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    env: dev
    app: travelbooking-ms
    layer: frontend
  name: dev-travelbooking-ingress
  namespace: dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: travelbooking.cloudgeek.in
      http:
        paths:
          -backend:
            serviceName:dev-cloudgeek-service
            servicePort:8080
           path:/
